[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/Scripts/GameMenuNode.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/TTF/OnestMedium1602-hint.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Fonts/TTF/OnestBlack1602-hint.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/UI/Buttons/OptionsMenuUIButtonFocused.png" type="Texture" id=4]
[ext_resource path="res://Resources/UI/Buttons/OptionsMenuUIButtonDefault.png" type="Texture" id=5]
[ext_resource path="res://Resources/UI/Buttons/OptionsMenuUIButtonHover.png" type="Texture" id=6]
[ext_resource path="res://Resources/UI/Buttons/OptionsMenuUIButtonPressed.png" type="Texture" id=7]
[ext_resource path="res://Resources/UI/Buttons/OptionsMenuUIButtonDisabled.png" type="Texture" id=8]
[ext_resource path="res://Resources/UI/Backgrounds/Texture-_Ice_NormalLevel.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 34
outline_size = 1
outline_color = Color( 0.00784314, 0.137255, 0.203922, 1 )
font_data = ExtResource( 2 )

[node name="GameMenuNode" type="Node"]

[node name="GameMenu" type="Control" parent="."]
margin_left = 100.0
margin_top = 75.0
margin_right = 475.0
margin_bottom = 675.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="GameMenu"]
margin_left = -99.9604
margin_top = -79.3337
margin_right = 532.04
margin_bottom = 849.666
texture = ExtResource( 9 )

[node name="VBoxContainer2" type="VBoxContainer" parent="GameMenu"]
margin_left = -87.0
margin_right = 498.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="GameMenu/VBoxContainer2"]
margin_right = 585.0
margin_bottom = 128.0
rect_min_size = Vector2( 325, 60 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0313726, 0.67451, 0.992157, 1 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.137255, 0.203922, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenu"]
margin_left = 40.0
margin_top = 180.0
margin_right = 365.0
margin_bottom = 820.0
custom_constants/separation = 19

[node name="MarginContainer" type="MarginContainer" parent="GameMenu/VBoxContainer"]
margin_right = 325.0

[node name="PlayButton" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_top = 19.0
margin_right = 325.0
margin_bottom = 69.0
rect_min_size = Vector2( 300, 50 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 4 )

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/PlayButton"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 59.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0313726, 0.67451, 0.992157, 1 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.137255, 0.203922, 1 )
custom_fonts/font = SubResource( 2 )
text = "PLAY"
max_lines_visible = 1

[node name="DraftButton" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_top = 88.0
margin_right = 325.0
margin_bottom = 138.0
rect_min_size = Vector2( 300, 50 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 4 )

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/DraftButton"]
margin_left = 88.589
margin_top = 2.45546
margin_right = 201.589
margin_bottom = 61.4555
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0313726, 0.67451, 0.992157, 1 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.137255, 0.203922, 1 )
custom_fonts/font = SubResource( 2 )
text = "DRAFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoresButton" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_top = 157.0
margin_right = 325.0
margin_bottom = 207.0
rect_min_size = Vector2( 300, 50 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 4 )

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/ScoresButton"]
margin_left = 90.0
margin_right = 203.0
margin_bottom = 59.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0313726, 0.67451, 0.992157, 1 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.137255, 0.203922, 1 )
custom_fonts/font = SubResource( 2 )
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_top = 226.0
margin_right = 325.0
margin_bottom = 276.0
rect_min_size = Vector2( 300, 50 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 4 )

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/SettingsButton"]
margin_left = 60.0
margin_right = 243.0
margin_bottom = 59.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0313726, 0.67451, 0.992157, 1 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.137255, 0.203922, 1 )
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"
uppercase = true

[node name="ExitGameButton" type="TextureButton" parent="GameMenu/VBoxContainer"]
margin_top = 295.0
margin_right = 325.0
margin_bottom = 345.0
rect_min_size = Vector2( 300, 50 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 8 )
texture_focused = ExtResource( 4 )

[node name="Label" type="Label" parent="GameMenu/VBoxContainer/ExitGameButton"]
margin_left = 100.0
margin_right = 283.0
margin_bottom = 59.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0313726, 0.67451, 0.992157, 1 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.137255, 0.203922, 1 )
custom_fonts/font = SubResource( 2 )
text = "EXIT"
uppercase = true

[connection signal="pressed" from="GameMenu/VBoxContainer/PlayButton" to="GameMenu" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/DraftButton" to="GameMenu" method="_on_DraftButton_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/ScoresButton" to="GameMenu" method="_on_ScoresButton_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/SettingsButton" to="GameMenu" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/ExitGameButton" to="GameMenu" method="_on_ExitGameButton_pressed"]
